# spmi_vent_tg_bot

./: .gitignore  LICENSE  README.md  pyproject.toml
spmi_vent_bot/: config.py  main.py
spmi_vent_bot/bot/: __init__.py  bot.py
spmi_vent_bot/bot/handlers/: __init__.py  main.py
spmi_vent_bot/bot/templates/: __init__.py  template_engine.py
spmi_vent_bot/database/: __init__.py  database.py  interface.py
spmi_vent_bot/database/methods/: user.py
spmi_vent_bot/database/models/: __init__.py  user.py
spmi_vent_bot/errors/: __init__.py
spmi_vent_bot/plots/: plot.py
spmi_vent_bot/templates/: start.html
